DEX-24183 | fix: increase margin to prevent cards form overlapping on responsive

--- a/_src-lp/blocks/c-productswithvpn2/c-productswithvpn2.scss
+++ b/_src-lp/blocks/c-productswithvpn2/c-productswithvpn2.scss
@@ -29,7 +29,7 @@
   row-gap: 0;
   width: auto;
   padding-bottom: 20px;
-  margin-bottom: 120px; /* simulate row-gap without polluting subgrid */
+  margin-bottom: 150px; /* simulate row-gap without polluting subgrid */
 }
 
 .c-productswithvpn2 > div {
